[package]
name = "bmos_client"
license =  "GPL-3.0-or-later"
authors = ["Sam <github@samueldgv.com>"]
description = "bmOS_client is an executable in charge of receiving and parsing JSON input from stdin and sending intents with enough confidence (>0.6) to the address and port provided (to bmOS_server). This is part of the software required to run a custom BMO-Boy."
version = "1.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json_minimal = "0.1.3"
